--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,5 @@
-<!-- <app-navigation></app-navigation> -->
-
 <div class="container">
-  <ul ngbNav #nav="ngbNav" class="nav-tabs">
+  <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
     <li [ngbNavItem]="1">
       <a ngbNavLink routerLink="/">Dashboard</a>
       <ng-template ngbNavContent>
@@ -17,4 +15,4 @@
   <div [ngbNavOutlet]="nav" class="mt-2"></div>
 </div>
 
-<router-outlet></router-outlet>
+<!-- <pre>Active: {{ active }}</pre> -->
